--- a/css/style.css
+++ b/css/style.css
@@ -15,36 +15,76 @@
 }
 
 .container {
-    width: 224px;
-    border: 2px solid black;
+    width: 100%;
 }
 
 .calculator {
+    margin: 50px auto;
+    width: 220px;
+    background-color: rgba(0, 0, 0, .7);
+    color: #fff;
+    font: 300 24px 'Helvetica Neue', sans-serif;
+    border-radius: 5px;
+    box-shadow: 0 10px 40px rgba(0, 0, 0, .3);
 }
 
-.calculator-buttons {
-
+.calculator > input {
+    display: block;
+    padding: 0 10px;
+    width: 100%;
+    height: 70px;
+    background-color: transparent;
+    outline: none;
+    border: none;
+    text-align: right;
+    color: #fff;
 }
 
-.row {
+.calculator-buttons {}
+
+button {
+    display: block;
+    width: 25%;
+    height: 50px;
+    padding: 0;
+    margin: 0;
+    line-height: 1;
+    background-color: #DCDCDC;
+    outline: none;
+    cursor: pointer;
+    border-width: 0;
+    box-shadow: 1px -1px 0 rgba(0, 0, 0, .4) inset;
 }
+
+.calculator .flex-2 {
+    width: 110px;
+}
+
+.calculator button:active {
+    background-color: #ddd;
+}
+
+.calculator-buttons > .row:last-child > button:first-child {
+    border-bottom-left-radius: 5px;
+}
+
+.calculator-buttons > .row:last-child > button:last-child {
+    border-bottom-right-radius: 4px;
+}
+
+.row {}
 
 .row > button {
     float: left;
 }
 
 .operator {
-    background-color: orange;
+    background-color: darkorange;
+    color: #fff;
 }
 
-button {
-    width: 55px;
-    height: 50px;
-    background-color: greenyellow;
-    border: 1px solid lightgray;
-    font: 20px Sans-Serif;
+.calculator button.operator:active,
+.calculator button.operator.active {
+    background-color: chocolate;
 }
 
-.flex-2 {
-    width: 110px;
-}
