change color button:active

--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ button {
 }
 
 .calculator button:active {
-    background-color: #ddd;
+    background-color: #eee;
 }
 
 .calculator-buttons > .row:last-child > button:first-child {
